--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="src/symbol.png" type="image/x-icon">
     <title>Funthematics Math Calculator</title>
-    <meta name="description" content="A brief description of your webpage">
+    <meta name="description" content="A web-based math calculator to calculate area and perimeter of basic 2d shaped objects.">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
 </head>
